feat: implement build configuration for excluding examples and minified output
Add build configuration to exclude examples from default build and provide
optional minified single file mode. Update vite.config.ts with mode-based
build configurations and package.json with new build scripts.

Users can now run \
pm run build\ for library build (excluding examples)
or \
pm run build:min\ for single minified file output.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode lib",
+    "build:lib": "tsc && vite build --mode lib",
+    "build:min": "tsc && vite build --mode min",
     "preview": "vite preview",
     "test": "vitest",
     "test:run": "vitest run",
